tests/miniJava/neg/006677_mutation.MiniJava
class java { public static void Main int [] java ; String [ ] java ) { { } } }
